--- a/.github/workflows/regular_test_run.yml
+++ b/.github/workflows/regular_test_run.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrage pip
+          pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run tests
