--- a/.github/workflows/regular_test_run.yml
+++ b/.github/workflows/regular_test_run.yml
@@ -16,5 +16,5 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: robot --pythonpath resources outputdir results tests
+        run: robot --pythonpath resources --outputdir results tests
         
