added link to secret BASE_URL

--- a/.github/workflows/regular_test_run.yml
+++ b/.github/workflows/regular_test_run.yml
@@ -17,4 +17,5 @@ jobs:
 
       - name: Run tests
         run: robot --pythonpath resources --outputdir results tests
-        
+        env:
+          BASE_URL: ${{ secrets.BASE_URL }}
