--- a/.github/workflows/regular_test_run.yml
+++ b/.github/workflows/regular_test_run.yml
@@ -23,3 +23,10 @@ jobs:
           tests
         env:
           BASE_URL: ${{ secrets.BASE_URL }}
+          
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./results
+          name: robot-test-results
+          retention-days: 3
