--- a/.github/workflows/regular_test_run.yml
+++ b/.github/workflows/regular_test_run.yml
@@ -16,6 +16,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
+        continue-on-error: true
         run: |
           robot --pythonpath resources \
           --outputdir results \
@@ -23,7 +24,7 @@ jobs:
           tests
         env:
           BASE_URL: ${{ secrets.BASE_URL }}
-          
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
